--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Hello, world! I'm Vital Cadlec Akpamoli
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Software Engineer and web developer enthusiast
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -11,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Vital Cadlec S. AKPAMOLI # add your name
 author-img: vital-Akpamoli.jpg # add your photo
-about-author: I am a telecommunications engineer and a Web developer. Always hungry to keep learning. # add description
+about-author: I am a software engineer and a Web developer. Always hungry to keep learning. # add description
 social-twitter: cadlec_akpamoli
 social-facebook: # add your Facebook handle
 social-github: cadlec # add your Github handle
