--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Hello, world! I'm Vital Cadlec Akpamoli
-description: > # this means to ignore newlines until "baseurl:"
-  Software Engineer and web developer enthusiast
+description: Software Engineer and web developer enthusiast
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
