adding some projects

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Vital Cadlec S. AKPAMOLI # add your name
 author-img: vital-Akpamoli.jpg # add your photo
-about-author: I am a software engineer and a Web developer. Always hungry to keep learning. # add description
+about-author: I am a software engineer and a Web developer wishing to create a successful startup some day. # add description
 social-twitter: cadlec_akpamoli
 social-facebook: # add your Facebook handle
 social-github: cadlec # add your Github handle
